--- a/.github/workflows/niftyworkflow.yml
+++ b/.github/workflows/niftyworkflow.yml
@@ -3,12 +3,11 @@ name: NIFTY50 realtime fetch
 on:
   schedule:
     # Cron syntax: "min hour day month day_of_week"
-    - cron: "50 3-9 * * 1-5"  # Run every 5 minutes from 9:20 AM to 3:30 PM IST, Monday to Friday
+    - cron: "*/5 3-9 * * 1-5"  # Run every 5 minutes from 9:20 AM to 3:30 PM IST, Monday to Friday
 
 jobs:
   run-script:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
