--- a/.github/workflows/historicalworkflow.yml
+++ b/.github/workflows/historicalworkflow.yml
@@ -34,3 +34,16 @@ jobs:
           SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
         run: |
           python Server/Stock_Data/historicalUpdate.py
+      - name: Configure Git
+        run: |
+          git config --global user.name "sik-sak"
+          git config --global user.email "siksak2024@gmail.com"
+      - name: Commit logs
+        run: |
+          git add Server/Logs/historicalUpdateLogs.log
+          git commit -m "Updated logs on $(date '+%Y-%m-%d %H:%M:%S')"
+      - name: Push changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git push
