--- a/.github/workflows/historicalworkflow.yml
+++ b/.github/workflows/historicalworkflow.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r Server/server-requirements.txt
+          pip install -r Server/requirements.txt
 
       - name: Run the Python script
         env:
