--- a/.github/workflows/niftyworkflow.yml
+++ b/.github/workflows/niftyworkflow.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r Server/server-requirements.txt
+          pip install -r Server/requirements.txt
 
       - name: Run the Python script
         env:
