--- a/.github/workflows/flushrealtimelogs.yml
+++ b/.github/workflows/flushrealtimelogs.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           git config --global user.name "sik-sak"
           git config --global user.email "siksak2024@gmail.com"
+          git pull
       - name: Commit logs
         run: |
           git add Server/Logs/realtimeFetchLogs.log
