--- a/.github/workflows/niftyworkflow.yml
+++ b/.github/workflows/niftyworkflow.yml
@@ -49,6 +49,7 @@ jobs:
         run: |
           git config --global user.name "sik-sak"
           git config --global user.email "siksak2024@gmail.com"
+          git pull
       - name: Update timestamp
         if: env.changes_detected == 'true'
         run: |
